# tracing-otel-extra

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  docker-compose.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  stale.yml
crates/axum-otel/: CHANGELOG.md  Cargo.toml  README.md
crates/axum-otel/src/: lib.rs  make_span.rs  on_failure.rs  on_response.rs
crates/axum-otel/tests/: integration.rs
crates/tracing-opentelemetry/: CHANGELOG.md  Cargo.toml  README.md
crates/tracing-opentelemetry/src/: guard.rs  lib.rs  macros.rs  otel.rs  resource.rs  subscriber.rs
crates/tracing-otel/: CHANGELOG.md  Cargo.toml  README.md
crates/tracing-otel/src/: lib.rs
crates/tracing-otel/src/http/: context.rs  fields.rs  mod.rs  propagation.rs  span.rs
crates/tracing-otel/src/logger/: config.rs  deserialize.rs  env.rs  init.rs  mod.rs  subscriber.rs  tests.rs
crates/tracing-otel/src/logs/: layer.rs  logger.rs  subscriber.rs
crates/tracing-otel/src/trace/: context.rs  fields.rs  http.rs  span.rs
examples/microservices/: QUICKSTART.md  README.md
examples/microservices/articles/src/: main.rs
examples/microservices/users/src/: main.rs
examples/otel/src/: main.rs
