[workspace]
members = [
    "crates/axum-otel",
    "crates/tracing-opentelemetry",
    "crates/tracing-otel",
    "examples/microservices/articles",
    "examples/microservices/users",
    "examples/otel",
]
resolver = "2"

[workspace.package]
rust-version = "1.92.0"
version = "0.31.5"
authors = ["nivek <h49987180@gmail.com>"]
edition = "2024"
license = "MIT/Apache-2.0"
repository = "https://github.com/iamnivekx/tracing-otel-extra"
documentation = "https://docs.rs/tracing-otel-extra/"
readme = "README.md"
description = "Tracing and OpenTelemetry integration utility library for Rust applications."
keywords = [
    "axum",
    "tracing",
    "logging",
    "opentelemetry",
    "otel",
    "jaeger",
    "loki",
    "tempo",
]
categories = ["asynchronous"]

[workspace.dependencies]

anyhow = "1.0"

axum = { version = "0.8.7" }
axum-otel = { path = "crates/axum-otel", version = "0.31.5" }
config = { version = "0.14.0", default-features = false }
dotenvy = { version = "0.15.7" }
http = { version = "1.3.1" }
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry-appender-tracing = { version = "0.31.0" }
opentelemetry-http = { version = "0.31.0", default-features = false }
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "http-json",
    "http-proto",
    "tls",
    "reqwest-rustls",
] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "trace",
    "logs",
] }

# reqwest (used in examples)
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.8.0"
# Note: reqwest-tracing doesn't support opentelemetry 0.31 yet
# Using opentelemetry_0_30 feature for backward compatibility
# Track: https://github.com/TrueLayer/reqwest-middleware/pull/249
reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_30"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Test dependencies
serial_test = { version = "3.3.1" }
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6.6", features = ["trace"] }

tracing = { version = "0.1.44" }
tracing-appender = { version = "0.2.4" }
tracing-opentelemetry = { version = "0.32.0" }
tracing-opentelemetry-extra = { path = "crates/tracing-opentelemetry", version = "0.31.5" }
tracing-otel-extra = { path = "crates/tracing-otel", features = [
    "fields",
    "context",
], version = "0.31.5" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
