[package]
name = "tracing-opentelemetry-extra"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
description = "Bootstrap utilities for tracing and OpenTelemetry integration."
documentation = "https://docs.rs/tracing-otel-extra"
homepage = "https://github.com/iamnivekx/tracing-otel-extra/tree/main/crates/tracing-opentelemetry"
repository = "https://github.com/iamnivekx/tracing-otel-extra/tree/main/crates/tracing-opentelemetry"
readme = "README.md"
keywords = ["tracing", "opentelemetry"]

[features]
subscriber = ["dep:tracing-subscriber", "dep:opentelemetry-appender-tracing"]

[dependencies]
anyhow = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }

tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
