[package]
name = "tracing-otel-extra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
description = "Bootstrap utilities for tracing and OpenTelemetry integration."
documentation = "https://docs.rs/tracing-otel-extra"
homepage = "https://github.com/iamnivekx/tracing-otel-extra/tree/main/crates/tracing-otel"
repository = "https://github.com/iamnivekx/tracing-otel-extra/tree/main/crates/tracing-otel"
readme = "README.md"
keywords = ["tracing", "opentelemetry", "logging"]

[dependencies]
anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

http = { workspace = true, optional = true }

# opentelemetry
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }

# tracing and tracing-opentelemetry
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["json"], optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry-extra = { workspace = true, optional = true }

envy = { workspace = true, optional = true }

[dev-dependencies]
opentelemetry-http = { workspace = true }
tokio = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# Base dependencies
fields = ["dep:http"]
macros = ["dep:tracing"]

# Composite features
http = [
	"dep:http",
	"dep:tracing",
	"dep:opentelemetry",
	"dep:opentelemetry-http",
	"dep:tracing-opentelemetry",
	"fields",
]

# Core features
# This feature is used to enable the OpenTelemetry integration.
otel = ["dep:tracing-opentelemetry-extra"]

# This feature is used to enable the logging integration.
logger = [
	"dep:tracing",
	"dep:opentelemetry",
	"dep:tracing-subscriber",
	"dep:tracing-appender",
	"tracing-opentelemetry-extra/subscriber",
	"otel",
]

# Feature combinations
context = ["http"]
span = ["context", "fields", "http", "macros"]
trace = ["span"]
env = ["dep:envy", "logger"]
